[package]
name = "tokio-connectors"
version = "0.1.1"
documentation = "https://docs.rs/tokio-connectors/"
repository = "https://github.com/ryankurte/tokio-connectors"
description = "A collection of connectors for tokio-based clients and servers"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MIT / Apache-2.0"
edition = "2024"

[features]

codec-json = ["serde_json"]
codec-postcard = ["postcard"]

default = [
    "codec-json",
    "codec-postcard",
]

[dependencies]
futures = "0.3.32"
postcard = { version = "1.1.3", optional = true, features = [ "use-std" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
tempdir = "0.3.7"
tracing-subscriber = "0.3.23"

